# nft-scrow-solana

./: Gemini solana.txt
EscrowBackend/: package-lock.json  package.json
EscrowBackend/src/services/: EscrowService.ts
EscrowBackend/src/types/: dasApi.ts  database.ts
EscrowBackend/src/utils/: constants.ts  metadata.ts
EscrowContract/: Cargo.toml
EscrowContract/src/: error.rs  events.rs  lib.rs
