[package]
name = "nft-escrow"
version = "0.1.0"
description = "Escrow program for NFTs and cNFTs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_escrow"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-bubblegum = { version = "0.4.0", features = ["no-entrypoint"] }

[dev-dependencies]
tokio = "1"
spl-token = "3.2"
spl-associated-token-account = "1.0"